Fix alignment of confirmation modal close

--- a/src/profile/components/modals/confirmationModal/ConfirmationModal.module.css
+++ b/src/profile/components/modals/confirmationModal/ConfirmationModal.module.css
@@ -28,6 +28,9 @@
     display: flex;
     align-items: flex-start;
 }
+.titleRow > *:first-child {
+    flex-grow: 1;
+}
 
 .closeButton {
     display: flex;
